# scriptor

./: .gitignore  Cargo.toml  FEATURES.md  README.md  file.txt  models.toml
migrations/: 20240101000000_initial_schema.sql  20240102000000_add_fragmentum_timestamps.sql
src/: lib.rs  main.rs
src/cli/: commands.rs  interface.rs  mod.rs
src/configs/: db.rs  fractor.rs  inference.rs  mod.rs  models.yaml  parakeet.rs  queue.rs  scriba.rs  scriptor.rs  settings.rs  silero.rs  stt.rs  theme.rs  vad.rs
src/stt/: audio.rs  fractor.rs  mod.rs  model.rs  onnx.rs  parakeet.rs  playback.rs  queue.rs  rec.rs  silero.rs  text.rs  transcription.rs  vad.rs
src/tui/: entrypoint.rs  mod.rs
src/tui/app/: events.rs  mod.rs  state.rs
src/tui/db/: config.rs  connections.rs  mod.rs  models.rs  ops.rs
src/tui/ui/: cursor.rs  layout.rs  mod.rs
src/tui/ui/components/: archivum_selector.rs  codices.rs  db_selector.rs  folia.rs  fragmenta.rs  input_states.rs  items.rs  lists.rs  logo.rs  mod.rs  overlay_window.rs  popups.rs  recording.rs  settings.rs
src/utils/: aws.rs
tests/: audio.rs  cli_interface.rs  config_scriptor.rs  db_ops.rs  transcription.rs
tests/common/: mod.rs
