[package]
name = "scriba"
version = "0.1.0"
edition = "2024"
authors = ["Giacomo Piccinini <giacomo.piccinini@proton.me>"]
license = "MIT"
description = "Scriba - Speech-to-Text CLI and TUI"
readme = "README.md"
homepage = "https://github.com/giacomopiccinini/scriba"
repository = "https://github.com/giacomopiccinini/scriba"
keywords = ["parakeet", "stt", "speech-to-text", "audio", "onnx", "nvidia"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
hound = "3.5.1"
ndarray = "0.16.1"
once_cell = "1.21.3"
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt", "coreml"] }
ratatui = "0.29.0"
regex = "1.12.2"
rubato = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"

[profile.release]
lto = true
