[package]
name = "scriptor"
version = "0.1.0"
edition = "2024"
authors = ["Giacomo Piccinini <giacomo.piccinini@proton.me>"]
license = "MIT"
description = "Scriptor - Speech-to-Text CLI and TUI"
readme = "README.md"
homepage = "https://github.com/giacomopiccinini/scriptor"
repository = "https://github.com/giacomopiccinini/scriptor"
keywords = ["parakeet", "stt", "speech-to-text", "audio", "onnx"]

[[bin]]
name = "scriptor"
path = "src/main.rs"

[lib]
name = "scriptor"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
arboard = "3.4"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
cpal = "0.16.0"
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.31"
hound = "3.5.1"
ndarray = "0.16.1"
once_cell = "1.21.3"
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt", "coreml"] }
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["stream"] }
ringbuf = "0.4.8"
rubato = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
spinoff = { version = "0.8.0", features = ["dots"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
textwrap = "0.16"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
uuid = { version = "1.19.0", features = ["v4", "v7"] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[dev-dependencies]
color-eyre = "0.6.5"
directories = "6.0.0"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
